--- a/src/TravelMonkey.Android/TravelMonkey.Android.csproj
+++ b/src/TravelMonkey.Android/TravelMonkey.Android.csproj
@@ -64,6 +64,9 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.1.0.442</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Forms.Maps">
+      <Version>4.5.0.725</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
