--- a/src/TravelMonkey.iOS/TravelMonkey.iOS.csproj
+++ b/src/TravelMonkey.iOS/TravelMonkey.iOS.csproj
@@ -114,6 +114,9 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.1.0.442</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Forms.Maps">
+      <Version>4.5.0.725</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
